--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
+    "paginationjs": "^2.1.5",
     "popper.js": "^1.16.1",
     "sass-loader": "^7.2.0",
     "vee-validate": "^2.2.15",
